home page styling complete

--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
             src="./rahul.gif"
             class="h-9 w-9 md:h-11 md:w-11 rounded-full"
             alt=""/>
-          <p class="hidden md:inline ml-2">Rahul Mondal</p>
+          <p class="hidden md:inline ml-2 font-[600]">Rahul Mondal</p>
+        </div>
+        <div class="icon">
+          <svg width="24" height="24"
+            class="h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g data-name="Layer 2"><g data-name="grid"><rect width="24" height="24" opacity="0"/><path d="M9 3H5a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"/><path d="M19 3h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"/><path d="M9 13H5a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2z"/><path d="M19 13h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2z"/></g></g>
+          </svg>
         </div>
         <div class="icon">
           <svg width="24" height="24" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"
@@ -95,12 +100,12 @@
         </div>
         <div class="icon">
           <svg width="24" height="24" viewBox="0 0 24 24" data-name="Livello 1" xmlns="http://www.w3.org/2000/svg"
-            class="h-6" fill="currentColor"><title>prime</title><g id="e6aa2fe1-efbb-451f-ba3c-57a42a00cf33" data-name="bell"><path d="M22.29,17.29l-2.71-2.71A2,2,0,0,1,19,13.17V9.29A7.19,7.19,0,0,0,12.22,2,7,7,0,0,0,5,9v4.17a2,2,0,0,1-.59,1.41L1.71,17.29A1,1,0,0,0,2.41,19H21.59A1,1,0,0,0,22.29,17.29Z"/><path d="M8.14,21a4,4,0,0,0,7.72,0H8.14Z"/></g></svg>
+            class="h-6" fill="currentColor"><g id="e6aa2fe1-efbb-451f-ba3c-57a42a00cf33" data-name="bell"><path d="M22.29,17.29l-2.71-2.71A2,2,0,0,1,19,13.17V9.29A7.19,7.19,0,0,0,12.22,2,7,7,0,0,0,5,9v4.17a2,2,0,0,1-.59,1.41L1.71,17.29A1,1,0,0,0,2.41,19H21.59A1,1,0,0,0,22.29,17.29Z"/><path d="M8.14,21a4,4,0,0,0,7.72,0H8.14Z"/></g></svg>
         </div>
         <div class="icon">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 330 330"
-            width="20" height="20"
-            class="mt-0.5" fill="currentColor"
+            width="24" height="24"
+            class="translate-y-0.5" fill="currentColor"
             xml:space="preserve"> <path id="XMLID_225_" d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"/> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g>
           </svg>
         </div>
@@ -406,6 +411,38 @@
       </div>
 
       <!-- Views -->
+      <div class="hidden md:block mt-4 mr-2 w-1/6">
+        <div class="flex mb-2 space-x-2">
+          <p>Contacts</p>
+          <svg width="24px" height="24px"
+            viewBox="0 0 24 24" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            fill="currentColor"
+            class="h-6 text-gray-500">
+            <g id="grid_system"/><g id="_icons"><path d="M20.8,7.3C20,6.8,19,6.6,18.1,6.9l-2.3,0.8C15.2,6.1,13.7,5,12,5H6C3.8,5,2,6.8,2,9v6c0,2.2,1.8,4,4,4h6   c1.7,0,3.2-1.1,3.8-2.7l2.3,0.8c0.3,0.1,0.6,0.2,1,0.2c0.6,0,1.2-0.2,1.7-0.6c0.8-0.6,1.2-1.5,1.2-2.4V9.8   C22,8.8,21.5,7.9,20.8,7.3z M12,17H6c-1.1,0-2-0.9-2-2V9c0-1.1,0.9-2,2-2h6c1.1,0,2,0.9,2,2v6C14,16.1,13.1,17,12,17z M20,14.2   c0,0.3-0.2,0.6-0.4,0.8c-0.3,0.2-0.6,0.2-0.9,0.1L16,14.3V9.7l2.7-0.9C19,8.7,19.3,8.8,19.6,9C19.8,9.2,20,9.4,20,9.8V14.2z"/></g>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="24" height="24"
+            viewBox="0 0 30 30" fill="currentColor"
+            class="h-5 text-gray-500 translate-y-0.5">
+            <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
+          </svg>
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 210 210"
+            width="24" height="24" fill="currentColor"
+            class="h-5 text-gray-500" xml:space="preserve"> <g id="XMLID_27_"> <path id="XMLID_28_" d="M25,80C11.215,80,0,91.215,0,105s11.215,25,25,25c13.785,0,25-11.215,25-25S38.785,80,25,80z"/> <path id="XMLID_30_" d="M105,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S118.785,80,105,80z"/> <path id="XMLID_71_" d="M185,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S198.785,80,185,80z"/> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g>
+          </svg>
+        </div>
+
+        <div class="space-y-2">
+          <div class="flex relative items-center space-x-2">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsEw9SbR0vDPRlODfN41Dcy0e8AbmUI_CouA&usqp=CAU"
+              class="h-9 rounded-full" alt=""
+            />
+            <p>Ellon Musk</p>
+            <div class="absolute left-5 bottom-1 p-1 bg-green-400 border border-green-300 rounded-full"></div>
+          </div>
+        </div>
+      </div>
     </main>
 
   </body>
