--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="flex items-center">
         <img
           src="https://links.papareact.com/5me"
-          class="h-9 w-9 md:h-11 md:w-11"
+          class="h-9 w-9 md:h-11 md:w-11 cursor-pointer"
           alt=""
         />
         <div
@@ -23,7 +23,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="40" height="40"
             viewBox="0 0 30 30"
-            class="h-6 text-gray-500">
+            class="h-6 text-gray-500 cursor-pointer">
             <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
           </svg>
           <input
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="flex items-center space-x-3">
+      <div class="flex items-center space-x-3 cursor-pointer">
         <div class="md:p-4 md:bg-gray-100 rounded-xl">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="24" height="24"
@@ -43,7 +43,7 @@
             <path d="M 25 1.0507812 C 24.7825 1.0507812 24.565859 1.1197656 24.380859 1.2597656 L 1.3808594 19.210938 C 0.95085938 19.550938 0.8709375 20.179141 1.2109375 20.619141 C 1.5509375 21.049141 2.1791406 21.129062 2.6191406 20.789062 L 4 19.710938 L 4 46 C 4 46.55 4.45 47 5 47 L 19 47 L 19 29 L 31 29 L 31 47 L 45 47 C 45.55 47 46 46.55 46 46 L 46 19.710938 L 47.380859 20.789062 C 47.570859 20.929063 47.78 21 48 21 C 48.3 21 48.589063 20.869141 48.789062 20.619141 C 49.129063 20.179141 49.049141 19.550938 48.619141 19.210938 L 25.619141 1.2597656 C 25.434141 1.1197656 25.2175 1.0507812 25 1.0507812 z M 35 5 L 35 6.0507812 L 41 10.730469 L 41 5 L 35 5 z"></path>
           </svg>
         </div>
-        <div class="md:p-4 md:bg-gray-100 rounded-xl">
+        <div class="md:p-4 md:bg-gray-100 rounded-xl cursor-pointer">
           <svg width="24" height="24"
              version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 447.514 447.514"
@@ -57,19 +57,19 @@
              <g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
           </svg>
         </div>
-        <div class="md:p-4 md:bg-gray-100 rounded-xl">
+        <div class="md:p-4 md:bg-gray-100 rounded-xl cursor-pointer">
           <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
             class="h-5 md:h-6 text-gray-600 hover:text-blue-500" fill="currentColor">
             <path d="M12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 Z M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3 C7.02943725,3 3,7.02943725 3,12 C3,16.9705627 7.02943725,21 12,21 Z M8,8.81797389 C8,8.48676533 8.09138399,8.16197812 8.2640927,7.87936387 C8.7824727,7.03110569 9.89035184,6.76368659 10.73861,7.28206659 L16.2248177,10.6347491 C16.4414031,10.7671068 16.6233909,10.9490946 16.7557486,11.16568 C17.2165308,11.9196873 16.978825,12.9044687 16.2248177,13.3652509 L10.73861,16.7179334 C10.4559958,16.8906421 10.1312086,16.9820261 9.8,16.9820261 C8.80588745,16.9820261 8,16.1761387 8,15.1820261 L8,8.81797389 Z M9,8.81797389 L9,15.1820261 C9,15.6238539 9.3581722,15.9820261 9.8,15.9820261 C9.9472038,15.9820261 10.0915537,15.941411 10.21716,15.8646516 L15.7033677,12.5119691 C15.9861204,12.3391758 16.0752601,11.9698827 15.9024668,11.68713 C15.8528326,11.6059105 15.7845872,11.5376651 15.7033677,11.4880309 L10.21716,8.13534842 C9.84015637,7.90495731 9.34776564,8.02381025 9.11737453,8.40081388 C9.04061511,8.52642021 9,8.67077009 9,8.81797389 Z"/>
           </svg>
         </div>
-        <div class="md:p-4 md:bg-gray-100">
+        <div class="md:p-4 md:bg-gray-100 cursor-pointer">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
             class="h-5 md:h-6 text-gray-500 hover:text-blue-500">
             <path d="M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM17 17H7.36729C6.86964 17 6.44772 16.6341 6.37735 16.1414L6.07143 14M2 3H4.5L4.78571 5M4.78571 5H5H21L18 14H6.5H6.07143M4.78571 5L6.07143 14M11 19C11 20.1046 10.1046 21 9 21C7.89543 21 7 20.1046 7 19C7 17.8954 7.89543 17 9 17C10.1046 17 11 17.8954 11 19Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
-        <div class="md:p-4 md:bg-gray-100 rounded-xl">
+        <div class="md:p-4 md:bg-gray-100 rounded-xl cursor-pointer">
           <svg width="24" height="24"
              class="h-5 md:h-6 text-gray-500 hover:text-blue-500"
              viewBox="0 -64 640 640" xmlns="http://www.w3.org/2000/svg"
@@ -79,7 +79,7 @@
       </div>
 
       <div class="flex items-center justify-end md:space-x-2">
-        <div class="flex items-center">
+        <div class="flex items-center cursor-pointer">
           <img
             src="./rahul.gif"
             class="h-9 w-9 md:h-11 md:w-11 rounded-full"
@@ -115,14 +115,14 @@
     <main class="flex h-screen bg-gray-100 overflow-hidden">
       <!-- Sidebar -->
       <div class="hidden sm:block p-2 pt-4 w-1/6 space-y-4 md:space-y-0">
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <img
             src="./rahul.gif"
             class="h-8 w-8 rounded-full"
             alt=""/>
           <p class="hidden md:inline ml-2">Rahul Mondal</p>
         </div>
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <svg width="25" height="25"
              class="h-5 md:h-6 text-blue-500"
              viewBox="0 -64 640 640" xmlns="http://www.w3.org/2000/svg"
@@ -130,7 +130,7 @@
           </svg>
           <p class="hidden md:inline ml-2">Friends</p>
         </div>
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <svg xmlns="http://www.w3.org/2000/svg"
             width="24" height="24"
             class="h-5 md:h-6 text-blue-500"
@@ -139,20 +139,20 @@
           </svg>
           <p class="hidden md:inline ml-2">Groups</p>
         </div>
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <svg width="24" height="24" fill="currentColor"
             class="md:-m-0.5 h-6 w-6 md:h-7 md:w-7 text-blue-500"
             viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M28.908,12.571a.952.952,0,0,0-.1-.166,3.146,3.146,0,0,0-.118-.423c-.006-.016-.012-.032-.02-.048L25.917,5.6A1,1,0,0,0,25,5H7a1,1,0,0,0-.917.6l-2.77,6.381a2.841,2.841,0,0,0,0,2.083A4.75,4.75,0,0,0,6,16.609V27a1,1,0,0,0,1,1H25a1,1,0,0,0,1-1V16.609a4.749,4.749,0,0,0,2.687-2.543,2.614,2.614,0,0,0,.163-.655A1.057,1.057,0,0,0,28.908,12.571ZM13,26V20h2v6Zm4,0V20h2v6Zm7,0H21V19a1,1,0,0,0-1-1H12a1,1,0,0,0-1,1v7H8V17a5.2,5.2,0,0,0,4-1.8,5.339,5.339,0,0,0,8,0A5.2,5.2,0,0,0,24,17Zm2.837-12.7A3.015,3.015,0,0,1,24,15a2.788,2.788,0,0,1-3-2.5,1,1,0,0,0-2,0A2.788,2.788,0,0,1,16,15a2.788,2.788,0,0,1-3-2.5,1,1,0,0,0-2,0A2.788,2.788,0,0,1,8,15a3.016,3.016,0,0,1-2.838-1.7.836.836,0,0,1,0-.571L7.656,7H24.344l2.477,5.7A.858.858,0,0,1,26.837,13.3Z"/></svg>
           <p class="hidden md:inline ml-2">Marketplace</p>
         </div>
-        <div class="flex md:p-1.5 items-center hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center hover:bg-gray-200 rounded-md cursor-pointer">
           <svg width="24" height="24"
             fill="currentColor"
             class="h-[1.25rem] md:h-[2rem] text-blue-500"
             viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M18 1H2C.899 1 0 1.9 0 3v11c0 1.1.882 2.178 1.961 2.393l4.372.875S2.57 19 5 19h10c2.43 0-1.334-1.732-1.334-1.732l4.373-.875C19.117 16.178 20 15.1 20 14V3c0-1.1-.9-2-2-2zm0 13H2V3h16v11z"/></svg>
           <p class="hidden md:inline ml-2">Watch</p>
         </div>
-        <div class="flex md:p-1.5 items-center hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center hover:bg-gray-200 rounded-md cursor-pointer">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	    width="24" height="24" viewBox="0 0 600.111 600.111"
             fill="currentColor"
@@ -249,7 +249,7 @@
           </svg>
           <p class="hidden md:inline ml-2">Events</p>
         </div>
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	    viewBox="0 0 512 512"
             width="24" height="24"
@@ -263,7 +263,7 @@
           </svg>
           <p class="hidden md:inline ml-2">Memories</p>
         </div>
-        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md">
+        <div class="flex md:p-1.5 items-center md:hover:bg-gray-200 rounded-md cursor-pointer">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 330 330"
           width="24" height="24"
           class="h-3 md:h-4 text-blue-500"
@@ -275,7 +275,7 @@
       <!-- Feed -->
       <div class="justify-center md:w-2/3 mx-auto px-2 md:px-8 overflow-y-auto scrollbar-hide">
         <div class="flex mt-2.5 space-x-2">
-          <div class="relative">
+          <div class="relative cursor-pointer">
             <img
               src="./rahul.gif"
               class="absolute m-1 p-0.5 h-10 bg-white rounded-full shadow z-[3]" alt=""
@@ -289,7 +289,7 @@
               class="h-32 rounded-xl hover:scale-[1.05] shadow-md z-[1]" alt=""
             />
           </div>
-          <div class="relative">
+          <div class="relative cursor-pointer">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsEw9SbR0vDPRlODfN41Dcy0e8AbmUI_CouA&usqp=CAU"
               class="absolute m-1 p-0.5 h-10 bg-white rounded-full shadow z-[3]" alt=""
@@ -305,7 +305,7 @@
           <div class="flex items-center space-x-2">
             <img
               src="./rahul.gif"
-              class="h-8 w-8 rounded-full"
+              class="h-8 w-8 rounded-full cursor-pointer"
               alt=""/>
             <div class="flex-1 p-2 rounded-full bg-gray-100">
               <input type="text"
@@ -365,9 +365,9 @@
               <div class="flex items-center justify-start">
                 <img
                   src="./rahul.gif"
-                  class="h-8 w-8 rounded-full"
+                  class="h-8 w-8 rounded-full cursor-pointer"
                   alt=""/>
-                <p class="ml-2">Rahul Mondal</p>
+                <p class="ml-2 cursor-pointer">Rahul Mondal</p>
               </div>
               <div class="my-2">
                 <p>Rahul in sunset</p>
@@ -411,29 +411,29 @@
       </div>
 
       <!-- Views -->
-      <div class="hidden md:block mt-4 mr-2 w-1/6">
+      <div class="hidden lg:block mt-4 mr-2 w-1/6">
         <div class="flex mb-2 space-x-2">
-          <p>Contacts</p>
+          <p class="cursor-pointer">Contacts</p>
           <svg width="24px" height="24px"
             viewBox="0 0 24 24" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             fill="currentColor"
-            class="h-6 text-gray-500">
+            class="h-6 text-gray-500 cursor-pointer">
             <g id="grid_system"/><g id="_icons"><path d="M20.8,7.3C20,6.8,19,6.6,18.1,6.9l-2.3,0.8C15.2,6.1,13.7,5,12,5H6C3.8,5,2,6.8,2,9v6c0,2.2,1.8,4,4,4h6   c1.7,0,3.2-1.1,3.8-2.7l2.3,0.8c0.3,0.1,0.6,0.2,1,0.2c0.6,0,1.2-0.2,1.7-0.6c0.8-0.6,1.2-1.5,1.2-2.4V9.8   C22,8.8,21.5,7.9,20.8,7.3z M12,17H6c-1.1,0-2-0.9-2-2V9c0-1.1,0.9-2,2-2h6c1.1,0,2,0.9,2,2v6C14,16.1,13.1,17,12,17z M20,14.2   c0,0.3-0.2,0.6-0.4,0.8c-0.3,0.2-0.6,0.2-0.9,0.1L16,14.3V9.7l2.7-0.9C19,8.7,19.3,8.8,19.6,9C19.8,9.2,20,9.4,20,9.8V14.2z"/></g>
           </svg>
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="24" height="24"
             viewBox="0 0 30 30" fill="currentColor"
-            class="h-5 text-gray-500 translate-y-0.5">
+            class="h-5 text-gray-500 cursor-pointer translate-y-0.5">
             <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
           </svg>
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 210 210"
             width="24" height="24" fill="currentColor"
-            class="h-5 text-gray-500" xml:space="preserve"> <g id="XMLID_27_"> <path id="XMLID_28_" d="M25,80C11.215,80,0,91.215,0,105s11.215,25,25,25c13.785,0,25-11.215,25-25S38.785,80,25,80z"/> <path id="XMLID_30_" d="M105,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S118.785,80,105,80z"/> <path id="XMLID_71_" d="M185,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S198.785,80,185,80z"/> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g>
+            class="h-5 text-gray-500 cursor-pointer" xml:space="preserve"> <g id="XMLID_27_"> <path id="XMLID_28_" d="M25,80C11.215,80,0,91.215,0,105s11.215,25,25,25c13.785,0,25-11.215,25-25S38.785,80,25,80z"/> <path id="XMLID_30_" d="M105,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S118.785,80,105,80z"/> <path id="XMLID_71_" d="M185,80c-13.785,0-25,11.215-25,25s11.215,25,25,25c13.785,0,25-11.215,25-25S198.785,80,185,80z"/> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g>
           </svg>
         </div>
 
         <div class="space-y-2">
-          <div class="flex relative items-center space-x-2">
+          <div class="flex relative items-center p-2 hover:bg-gray-200 space-x-2 rounded-md cursor-pointer">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsEw9SbR0vDPRlODfN41Dcy0e8AbmUI_CouA&usqp=CAU"
               class="h-9 rounded-full" alt=""
