--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Facebook</title>
     <link rel="stylesheet" href="./style.css">
+    <style type="text/tailwindcss">
+      @layer components {
+        .icon {
+          @apply hidden lg:inline-flex items-center justify-center p-2 cursor-pointer text-gray-700 bg-gray-200 hover:bg-gray-300 rounded-full;
+        }
+      }
+    </style>
   </head>
   <body>
 
