--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style type="text/tailwindcss">
       @layer components {
         .icon {
-          @apply hidden lg:inline-flex items-center justify-center p-2 cursor-pointer text-gray-700 bg-gray-200 hover:bg-gray-300 rounded-full;
+          @apply hidden md:inline-flex items-center justify-center p-2 cursor-pointer text-gray-700 bg-gray-200 hover:bg-gray-300 rounded-full;
         }
       }
     </style>
@@ -419,7 +419,7 @@
       </div>
 
       <!-- Views -->
-      <div class="hidden lg:block mt-4 mr-2 w-1/6">
+      <div class="hidden md:block mt-4 mr-2 w-1/6">
         <div class="flex mb-2 space-x-2">
           <p class="cursor-pointer">Contacts</p>
           <svg width="24px" height="24px"
